--- a/npl_wids_3.ipynb
+++ b/npl_wids_3.ipynb
@@ -953,13 +953,143 @@
         "print(\"score: %.2f\" % (score))\n",
         "print(\"acc: %.2f\" % (acc))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model2 = Sequential((Dense(2,activation='sigmoid')))\n",
+        "#callbacks = [ ReduceLROnPlateau(monitor='val_loss', patience=5, cooldown=0),\n",
+        " #             EarlyStopping(monitor='val_acc', min_delta=1e-4, patience=5)]\n",
+        "model2.compile(loss = 'binary_crossentropy', optimizer='adam',metrics = ['accuracy'])\n",
+        "# print(model2.summary())"
+      ],
+      "metadata": {
+        "id": "xcVw7DB1Y4ka"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model2.summary())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        },
+        "id": "LGIo5VOEbM3k",
+        "outputId": "f026db80-f03d-4ec5-b27e-7d1dcdcdee54"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-44-4a4c8bce6d2e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36msummary\u001b[0;34m(self, line_length, positions, print_fn, expand_nested, show_trainable)\u001b[0m\n\u001b[1;32m   2867\u001b[0m     \"\"\"\n\u001b[1;32m   2868\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuilt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2869\u001b[0;31m       raise ValueError(\n\u001b[0m\u001b[1;32m   2870\u001b[0m           \u001b[0;34m'This model has not yet been built. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2871\u001b[0m           \u001b[0;34m'Build the model first by calling `build()` or by calling '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: This model has not yet been built. Build the model first by calling `build()` or by calling the model on a batch of data."
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X_new1, X_del1, Y_new1, Y_del1 = train_test_split(X,Y, test_size = 0.2, random_state = 51)\n",
+        "X_train1,X_test1,Y_train1, Y_test1 =train_test_split(X_new1,Y_new1, test_size = 0.3, random_state =11 )"
+      ],
+      "metadata": {
+        "id": "94b3u3a1g6KC"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size = 256\n",
+        "epochs = 6\n",
+        "model2.fit(X_train1, Y_train1, batch_size = batch_size, epochs = epochs, verbose=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z34BBiLtgFdl",
+        "outputId": "ea4b90ca-fd87-4e62-bb73-f6c1d3c8dfdc"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/6\n",
+            "3454/3454 [==============================] - 9s 3ms/step - loss: 27.2505 - accuracy: 0.5216\n",
+            "Epoch 2/6\n",
+            "3454/3454 [==============================] - 9s 3ms/step - loss: 27.2083 - accuracy: 0.5216\n",
+            "Epoch 3/6\n",
+            "3454/3454 [==============================] - 10s 3ms/step - loss: 27.3907 - accuracy: 0.5212\n",
+            "Epoch 4/6\n",
+            "3454/3454 [==============================] - 9s 3ms/step - loss: 27.3000 - accuracy: 0.5204\n",
+            "Epoch 5/6\n",
+            "3454/3454 [==============================] - 10s 3ms/step - loss: 27.2047 - accuracy: 0.5211\n",
+            "Epoch 6/6\n",
+            "3454/3454 [==============================] - 11s 3ms/step - loss: 27.6772 - accuracy: 0.5203\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f84d75d5070>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score,acc = model2.evaluate(X_test, Y_test, verbose = 1, batch_size = batch_size)\n",
+        "print(\"score: %.2f\" % (score))\n",
+        "print(\"acc: %.2f\" % (acc))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0pPyzZrogQf0",
+        "outputId": "bc6077d1-aac0-4856-b3d1-1dd141d439ff"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "925/925 [==============================] - 2s 2ms/step - loss: 34.6876 - accuracy: 0.5218\n",
+            "score: 34.69\n",
+            "acc: 0.52\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMYd0Toubl+vjdvcEcfhdTq",
+      "authorship_tag": "ABX9TyOl42RrFyNsmk+EEg9Ou1KF",
       "include_colab_link": true
     },
     "gpuClass": "standard",
